6/9/23 Add grid button and fix bug where grid border does not align

--- a/styles.css
+++ b/styles.css
@@ -2,66 +2,89 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: whitesmoke;
-}
-
-h1 {
-    font-weight: 600;
-    color: #333;
-    display: flex;
-    justify-content: center;
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
-
-body {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+  }
+  
+  body {
     display: flex;
     flex-direction: column;
-    background-color: whitesmoke;
     align-items: center;
-}
-
-#sketchpad {
+    justify-content: center;
+    background-color: whitesmoke;
+    overflow: hidden;
+    height: 100vh;
+  }
+  
+  #sketchPad {
     display: flex;
     align-items: center;
     justify-content: center;
-    align-self: center;
-    width: 519px !important;
-}
-
-#grid {
-
-    width: calc(100% + 20px);
-    display: flex;
-    flex-wrap: wrap;
+    max-width: 519px;
+    max-height: 514px;
+    border: #000000 1px solid;
     flex-grow: 0;
     flex-shrink: 0;
-    margin-left: 20px;
-}
-
-.cell {
+    position: relative;
+    overflow: hidden;
+  }
+  
+  #grid {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(16, 32px);
+    grid-template-rows: repeat(16, 32px);
+    box-sizing: content-box;
+  }
+  
+  .cell {
     border: 1px solid #302f2f;
-    width: 32px !important;
+    width: 32px;
     height: 32px;
     background-color: #ffffff;
     flex-grow: 0;
     flex-shrink: 0;
     user-select: none;
-}
-
-.btn {
-    border: #302f2f 1px solid;
-    margin-top: 50px;
-}
-
-.btn:hover {
-    border: #302f2f 1px solid;
-    transform: scale(1.1);
-    transition: ease-in 0.1s;
-}
-
-.buttons {
+  }
+  
+  h1 {
+    font-weight: 600;
+    color: #333;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+  }
+  
+  .buttons {
     display: flex;
     justify-content: center;
     align-items: center;
-}
+    gap: 25px;
+    margin-top: 50px;
+  }
+  
+  .btn {
+    border: #302f2f 1px solid;
+    background-color: #ffffff;
+  }
+  
+  .btn:hover {
+    border: #302f2f 1px solid;
+    transform: scale(1.1);
+    transition: ease-in 0.1s;
+    background-color: #ffffff;
+  }
+  
+  #clearBtn {
+    background-color: red;
+  }
+  
+  #gridBtn {
+    background-color: rgb(34, 233, 34);
+  }
+  
+  #colorSelect {
+    border: #302f2f 1px solid;
+    width: 200px;
+  }
+  
